dataset1235/2025-2/2868285114/users/2008605748/executions/3071719669_1050673866.log
== RUN (2025-08-28 22:44:09)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
136664.82
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
389777.78
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
80466.81
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
246226.18
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
138085.66
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
20002222.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:32:27)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:27:09)
-- CODE: 
peso = float(input(""))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
None
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
None
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
None
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
None
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
None
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:10)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
136664.82
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
389777.78
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
80466.81
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
246226.18
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
138085.66
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
20002222.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:32:14)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:44:47)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
resto = 5
r = (peso * quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
136664.82
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
389777.78
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
80466.81
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
246226.18
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
138085.66
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
20002222.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:32:12)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:54)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
resto = 4
r = (peso * quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
136664.82
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
389777.78
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
80466.81
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
246226.18
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
138085.66
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
20002222.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:45:22)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
resto = 4
r = (peso - quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2565.9
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5583.27
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
919.89
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1837.46
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2156.36
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:31:38)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade // 5)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.0
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.0
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.0
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.0
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.0
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:45:29)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
resto = 4
r = (peso - quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
2565.9
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
5583.27
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
919.89
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
1837.46
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
2156.36
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000.56
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:32:12)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:27:38)
-- CODE: 
peso = float(input(""))
quantidade = float(input(""))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
None
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
None
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
None
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
None
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
None
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:32:52)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:53)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
resto = 4
r = (peso * quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
136664.82
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
389777.78
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
80466.81
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
246226.18
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
138085.66
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
20002222.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:32:15)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:00)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 4)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
8541.55
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
24361.11
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
5029.18
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
15389.14
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
8630.35
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1250138.88
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:11)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade * 4)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
136664.82
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
389777.78
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
80466.81
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
246226.18
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
138085.66
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
20002222.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:32:41)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
-- ERROR:
File "XXXX", line 4
    print(r,2))
              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
-- ERROR:
File "XXXX", line 4
    print(r,2))
              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
-- ERROR:
File "XXXX", line 4
    print(r,2))
              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
-- ERROR:
File "XXXX", line 4
    print(r,2))
              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
-- ERROR:
File "XXXX", line 4
    print(r,2))
              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
-- ERROR:
File "XXXX", line 4
    print(r,2))
              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:32:08)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:40)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade // 5)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.0
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.0
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.0
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.0
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.0
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:32:33)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade / 5)
print(round(r,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.24
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.89
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.34
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.31
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.28
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:31:42)
-- CODE: 
peso = float(input(" "))
quantidade = float(input(" "))
r = (peso * quantidade // 5)
print(round(r,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2618.1
13.05
---- correct output:
2565.9
---- user output:
6833.0
-- TEST CASE 2:
---- input:
5652.23
17.24
---- correct output:
5583.27
---- user output:
19488.0
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
919.89
---- user output:
4023.0
-- TEST CASE 4:
---- input:
1962.9
31.36
---- correct output:
1837.46
---- user output:
12311.0
-- TEST CASE 5:
---- input:
2218.6
15.56
---- correct output:
2156.36
---- user output:
6904.0
-- TEST CASE 6:
---- input:
5000.5555
1000
---- correct output:
1000.56
---- user output:
1000111.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
